@@ -96,6 +96,7 @@ import org.apache.iceberg.view.BaseViewOperations;
 import org.apache.iceberg.view.ViewBuilder;
 import org.apache.iceberg.view.ViewMetadata;
 import org.apache.iceberg.view.ViewMetadataParser;
+import org.apache.iceberg.view.ViewOperations;
 import org.apache.iceberg.view.ViewUtil;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.TestOnly;
@@ -109,7 +110,6 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
   private static final Logger LOG = LoggerFactory.getLogger(BasePolarisCatalog.class);
 
   private static final Joiner SLASH = Joiner.on("/");
-  private static final Joiner DOT = Joiner.on(".");
 
   // Config key for whether to allow setting the FILE_IO_IMPL using catalog properties. Should
   // only be allowed in dev/test environments.
@@ -117,19 +117,16 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
   private static final int MAX_RETRIES = 12;
 
   static final Predicate<Exception> SHOULD_RETRY_REFRESH_PREDICATE =
-      new Predicate<Exception>() {
-        @Override
-        public boolean test(Exception ex) {
-          // Default arguments from BaseMetastoreTableOperation only stop retries on
-          // NotFoundException. We should more carefully identify the set of retriable
-          // and non-retriable exceptions here.
-          return !(ex instanceof NotFoundException)
-              && !(ex instanceof IllegalArgumentException)
-              && !(ex instanceof AlreadyExistsException)
-              && !(ex instanceof ForbiddenException)
-              && !(ex instanceof UnprocessableEntityException)
-              && isStorageProviderRetryableException(ex);
-        }
+      ex -> {
+        // Default arguments from BaseMetastoreTableOperation only stop retries on
+        // NotFoundException. We should more carefully identify the set of retriable
+        // and non-retriable exceptions here.
+        return !(ex instanceof NotFoundException)
+            && !(ex instanceof IllegalArgumentException)
+            && !(ex instanceof AlreadyExistsException)
+            && !(ex instanceof ForbiddenException)
+            && !(ex instanceof UnprocessableEntityException)
+            && isStorageProviderRetryableException(ex);
       };
   public static final String CLEANUP_ON_NAMESPACE_DROP = "CLEANUP_ON_NAMESPACE_DROP";
 
@@ -141,7 +138,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
   private final AuthenticatedPolarisPrincipal authenticatedPrincipal;
   private String ioImplClassName;
   private FileIO catalogFileIO;
-  private String catalogName;
+  private final String catalogName;
   private long catalogId = -1;
   private String defaultBaseLocation;
   private CloseableGroup closeableGroup;
@@ -351,8 +348,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
                 })
             .orElse(Map.of());
     PolarisMetaStoreManager.DropEntityResult dropEntityResult =
-        dropTableLike(
-            catalogId, PolarisEntitySubType.TABLE, tableIdentifier, storageProperties, purge);
+        dropTableLike(PolarisEntitySubType.TABLE, tableIdentifier, storageProperties, purge);
     if (!dropEntityResult.isSuccess()) {
       return false;
     }
@@ -376,7 +372,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
           "Cannot list tables for namespace. Namespace does not exist: %s", namespace);
     }
 
-    return listTableLike(catalogId, PolarisEntitySubType.TABLE, namespace);
+    return listTableLike(PolarisEntitySubType.TABLE, namespace);
   }
 
   @Override
@@ -385,7 +381,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
       return;
     }
 
-    renameTableLike(catalogId, PolarisEntitySubType.TABLE, from, to);
+    renameTableLike(PolarisEntitySubType.TABLE, from, to);
   }
 
   @Override
@@ -435,8 +431,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
         .getConfigurationStore()
         .getConfiguration(
             callContext.getPolarisCallContext(),
-            PolarisConfiguration.ALLOW_NAMESPACE_LOCATION_OVERLAP,
-            PolarisConfiguration.DEFAULT_ALLOW_NAMESPACE_LOCATION_OVERLAP)) {
+            PolarisConfiguration.ALLOW_NAMESPACE_LOCATION_OVERLAP)) {
       LOG.debug("Validating no overlap for {} with sibling tables or namespaces", namespace);
       validateNoLocationOverlap(
           entity.getBaseLocation(), resolvedParent.getRawFullPath(), entity.getName());
@@ -526,11 +521,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
 
   @Override
   public boolean namespaceExists(Namespace namespace) {
-    PolarisResolvedPathWrapper resolvedEntities = resolvedEntityView.getResolvedPath(namespace);
-    if (resolvedEntities == null) {
-      return false;
-    }
-    return true;
+    return resolvedEntityView.getResolvedPath(namespace) != null;
   }
 
   @Override
@@ -585,8 +576,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
         .getConfigurationStore()
         .getConfiguration(
             callContext.getPolarisCallContext(),
-            PolarisConfiguration.ALLOW_NAMESPACE_LOCATION_OVERLAP,
-            PolarisConfiguration.DEFAULT_ALLOW_NAMESPACE_LOCATION_OVERLAP)) {
+            PolarisConfiguration.ALLOW_NAMESPACE_LOCATION_OVERLAP)) {
       LOG.debug("Validating no overlap with sibling tables or namespaces");
       validateNoLocationOverlap(
           NamespaceEntity.of(updatedEntity).getBaseLocation(),
@@ -700,18 +690,17 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
           "Cannot list views for namespace. Namespace does not exist: %s", namespace);
     }
 
-    return listTableLike(catalogId, PolarisEntitySubType.VIEW, namespace);
+    return listTableLike(PolarisEntitySubType.VIEW, namespace);
   }
 
   @Override
-  protected BasePolarisViewOperations newViewOps(TableIdentifier identifier) {
+  protected ViewOperations newViewOps(TableIdentifier identifier) {
     return new BasePolarisViewOperations(catalogFileIO, identifier);
   }
 
   @Override
   public boolean dropView(TableIdentifier identifier) {
-    return dropTableLike(catalogId, PolarisEntitySubType.VIEW, identifier, Map.of(), true)
-        .isSuccess();
+    return dropTableLike(PolarisEntitySubType.VIEW, identifier, Map.of(), true).isSuccess();
   }
 
   @Override
@@ -720,14 +709,14 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
       return;
     }
 
-    renameTableLike(catalogId, PolarisEntitySubType.VIEW, from, to);
+    renameTableLike(PolarisEntitySubType.VIEW, from, to);
   }
 
   @Override
   public boolean sendNotification(
       TableIdentifier identifier, NotificationRequest notificationRequest) {
     return sendNotificationForTableLike(
-        catalogId, PolarisEntitySubType.TABLE, identifier, notificationRequest);
+        PolarisEntitySubType.TABLE, identifier, notificationRequest);
   }
 
   @Override
@@ -916,10 +905,6 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
   /**
    * Validates the table location has no overlap with other entities after checking the
    * configuration of the service
-   *
-   * @param identifier
-   * @param resolvedNamespace
-   * @param location
    */
   private void validateNoLocationOverlap(
       TableIdentifier identifier, List<PolarisEntity> resolvedNamespace, String location) {
@@ -928,8 +913,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
         .getConfigurationStore()
         .getConfiguration(
             callContext.getPolarisCallContext(),
-            PolarisConfiguration.ALLOW_TABLE_LOCATION_OVERLAP,
-            PolarisConfiguration.DEFAULT_ALLOW_TABLE_LOCATION_OVERLAP)) {
+            PolarisConfiguration.ALLOW_TABLE_LOCATION_OVERLAP)) {
       LOG.debug("Skipping location overlap validation for identifier '{}'", identifier);
     } else { // if (entity.getSubType().equals(PolarisEntitySubType.TABLE)) {
       // TODO - is this necessary for views? overlapping views do not expose subdirectories via the
@@ -946,9 +930,6 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
    * is a namespace whose parent is the catalog, namespaces and tables otherwise) and checks the
    * base-location property of each. The target entity's base location may not be a prefix or a
    * suffix of any sibling entity's base location.
-   *
-   * @param location
-   * @param parentPath
    */
   private void validateNoLocationOverlap(
       String location, List<PolarisEntity> parentPath, String name) {
@@ -969,7 +950,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
     // namespaces
     Optional<NamespaceEntity> parentNamespace =
         parentPath.size() > 1
-            ? Optional.of(NamespaceEntity.of(parentPath.get(parentPath.size() - 1)))
+            ? Optional.of(NamespaceEntity.of(parentPath.getLast()))
             : Optional.empty();
 
     List<TableIdentifier> siblingTables =
@@ -995,7 +976,6 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
                       .collect(Collectors.toList());
                 })
             .orElse(List.of());
-    ;
 
     List<Namespace> siblingNamespaces =
         siblingNamespacesResult.getEntities().stream()
@@ -1009,13 +989,13 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
                   newLevels[nsLevels.length] = ns.getName();
                   return Namespace.of(newLevels);
                 })
-            .collect(Collectors.toList());
+            .toList();
     LOG.debug(
         "Resolving {} sibling entities to validate location",
         siblingTables.size() + siblingNamespaces.size());
     PolarisResolutionManifest resolutionManifest =
         new PolarisResolutionManifest(
-            callContext, entityManager, authenticatedPrincipal, parentPath.get(0).getName());
+            callContext, entityManager, authenticatedPrincipal, parentPath.getFirst().getName());
     siblingTables.forEach(
         tbl ->
             resolutionManifest.addPath(
@@ -1067,11 +1047,9 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
 
   private class BasePolarisCatalogTableBuilder
       extends BaseMetastoreViewCatalog.BaseMetastoreViewCatalogTableBuilder {
-    private final TableIdentifier identifier;
 
     public BasePolarisCatalogTableBuilder(TableIdentifier identifier, Schema schema) {
       super(identifier, schema);
-      this.identifier = identifier;
     }
 
     @Override
@@ -1081,11 +1059,9 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
   }
 
   private class BasePolarisCatalogViewBuilder extends BaseMetastoreViewCatalog.BaseViewBuilder {
-    private final TableIdentifier identifier;
 
     public BasePolarisCatalogViewBuilder(TableIdentifier identifier) {
       super(identifier);
-      this.identifier = identifier;
     }
 
     @Override
@@ -1122,7 +1098,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
           LOG.atError()
               .addKeyValue("entity.getTableIdentifier()", entity.getTableIdentifier())
               .addKeyValue("tableIdentifier", tableIdentifier)
-              .log("Stored entity identifier mismatches requested identifier");
+              .log("Stored table identifier mismatches requested identifier");
         }
       }
 
@@ -1137,18 +1113,13 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
             MAX_RETRIES,
             metadataLocation -> {
               FileIO fileIO = this.tableFileIO;
-              boolean closeFileIO = false;
-              PolarisResolvedPathWrapper resolvedStorageEntity =
-                  resolvedEntities == null
-                      ? resolvedEntityView.getResolvedPath(tableIdentifier.namespace())
-                      : resolvedEntities;
               String latestLocationDir =
                   latestLocation.substring(0, latestLocation.lastIndexOf('/'));
               fileIO =
                   refreshIOWithCredentials(
                       tableIdentifier,
                       Set.of(latestLocationDir),
-                      resolvedStorageEntity,
+                      resolvedEntities,
                       new HashMap<>(),
                       fileIO);
               return TableMetadataParser.read(fileIO, metadataLocation);
@@ -1158,7 +1129,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
 
     @Override
     public void doCommit(TableMetadata base, TableMetadata metadata) {
-      LOG.debug("doCommit for {} with base {}, metadata {}", tableIdentifier, base, metadata);
+      LOG.debug("doCommit for table {} with base {}, metadata {}", tableIdentifier, base, metadata);
       // TODO: Maybe avoid writing metadata if there's definitely a transaction conflict
       if (null == base && !namespaceExists(tableIdentifier.namespace())) {
         throw new NoSuchNamespaceException(
@@ -1191,7 +1162,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
           resolvedTableEntities == null
               ? resolvedEntityView.getResolvedPath(tableIdentifier.namespace()).getRawFullPath()
               : resolvedTableEntities.getRawParentPath();
-      CatalogEntity catalog = CatalogEntity.of(resolvedNamespace.get(0));
+      CatalogEntity catalog = CatalogEntity.of(resolvedNamespace.getFirst());
 
       if (base == null || !metadata.location().equals(base.location())) {
         // If location is changing then we must validate that the requested location is valid
@@ -1262,9 +1233,9 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
             tableIdentifier, oldLocation, newLocation, existingLocation);
       }
       if (null == existingLocation) {
-        createTableLike(catalogId, tableIdentifier, entity);
+        createTableLike(tableIdentifier, entity);
       } else {
-        updateTableLike(catalogId, tableIdentifier, entity);
+        updateTableLike(tableIdentifier, entity);
       }
     }
 
@@ -1282,17 +1253,16 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
   private void validateMetadataFileInTableDir(
       TableIdentifier identifier, TableMetadata metadata, CatalogEntity catalog) {
     PolarisCallContext polarisCallContext = callContext.getPolarisCallContext();
-    String allowEscape =
-        catalog
-            .getPropertiesAsMap()
-            .get(PolarisConfiguration.CATALOG_ALLOW_EXTERNAL_TABLE_LOCATION);
-    if (!Boolean.parseBoolean(allowEscape)
+    boolean allowEscape =
+        polarisCallContext
+            .getConfigurationStore()
+            .getConfiguration(
+                polarisCallContext, PolarisConfiguration.ALLOW_EXTERNAL_TABLE_LOCATION);
+    if (!allowEscape
         && !polarisCallContext
             .getConfigurationStore()
             .getConfiguration(
-                polarisCallContext,
-                PolarisConfiguration.ALLOW_EXTERNAL_METADATA_FILE_LOCATION,
-                PolarisConfiguration.DEFAULT_ALLOW_EXTERNAL_METADATA_FILE_LOCATION)) {
+                polarisCallContext, PolarisConfiguration.ALLOW_EXTERNAL_METADATA_FILE_LOCATION)) {
       LOG.debug(
           "Validating base location {} for table {} in metadata file {}",
           metadata.location(),
@@ -1343,7 +1313,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
           LOG.atError()
               .addKeyValue("entity.getTableIdentifier()", entity.getTableIdentifier())
               .addKeyValue("identifier", identifier)
-              .log("Stored entity identifier mismatches requested identifier");
+              .log("Stored view identifier mismatches requested identifier");
         }
       }
 
@@ -1359,14 +1329,10 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
             metadataLocation -> {
               FileIO fileIO = this.viewFileIO;
               boolean closeFileIO = false;
-              PolarisResolvedPathWrapper resolvedStorageEntity =
-                  resolvedEntities == null
-                      ? resolvedEntityView.getResolvedPath(identifier.namespace())
-                      : resolvedEntities;
               String latestLocationDir =
                   latestLocation.substring(0, latestLocation.lastIndexOf('/'));
               Optional<PolarisEntity> storageInfoEntity =
-                  findStorageInfoFromHierarchy(resolvedStorageEntity);
+                  findStorageInfoFromHierarchy(resolvedEntities);
               Map<String, String> credentialsMap =
                   storageInfoEntity
                       .map(
@@ -1396,7 +1362,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
     @Override
     public void doCommit(ViewMetadata base, ViewMetadata metadata) {
       // TODO: Maybe avoid writing metadata if there's definitely a transaction conflict
-      LOG.debug("doCommit for {} with base {}, metadata {}", identifier, base, metadata);
+      LOG.debug("doCommit for view {} with base {}, metadata {}", identifier, base, metadata);
       if (null == base && !namespaceExists(identifier.namespace())) {
         throw new NoSuchNamespaceException(
             "Cannot create view %s. Namespace does not exist: %s",
@@ -1444,12 +1410,6 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
       String newLocation = writeNewMetadataIfRequired(metadata);
       String oldLocation = base == null ? null : currentMetadataLocation();
 
-      if (null == base && !namespaceExists(identifier.namespace())) {
-        throw new NoSuchNamespaceException(
-            "Cannot create view %s. Namespace does not exist: %s",
-            identifier, identifier.namespace());
-      }
-
       TableLikeEntity entity =
           TableLikeEntity.of(resolvedEntities == null ? null : resolvedEntities.getRawLeafEntity());
       String existingLocation;
@@ -1484,9 +1444,9 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
             identifier, oldLocation, newLocation, existingLocation);
       }
       if (null == existingLocation) {
-        createTableLike(catalogId, identifier, entity);
+        createTableLike(identifier, entity);
       } else {
-        updateTableLike(catalogId, identifier, entity);
+        updateTableLike(identifier, entity);
       }
     }
 
@@ -1547,7 +1507,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
   }
 
   private void renameTableLike(
-      long catalogId, PolarisEntitySubType subType, TableIdentifier from, TableIdentifier to) {
+      PolarisEntitySubType subType, TableIdentifier from, TableIdentifier to) {
     LOG.debug("Renaming tableLike from {} to {}", from, to);
     PolarisResolvedPathWrapper resolvedEntities = resolvedEntityView.getResolvedPath(from, subType);
     if (resolvedEntities == null) {
@@ -1610,7 +1570,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
             if (existingEntitySubType == null) {
               // this code path is unexpected
               throw new AlreadyExistsException(
-                  "Cannot rename %s to %s. Object %s already exists", from, to);
+                  "Cannot rename %s to %s. Object already exists", from, to);
             } else if (existingEntitySubType == PolarisEntitySubType.TABLE) {
               throw new AlreadyExistsException(
                   "Cannot rename %s to %s. Table already exists", from, to);
@@ -1659,10 +1619,10 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
 
   /**
    * Caller must fill in all entity fields except parentId, since the caller may not want to
-   * duplicate the logic to try to reolve parentIds before constructing the proposed entity. This
+   * duplicate the logic to try to resolve parentIds before constructing the proposed entity. This
    * method will fill in the parentId if needed upon resolution.
    */
-  private void createTableLike(long catalogId, TableIdentifier identifier, PolarisEntity entity) {
+  private void createTableLike(TableIdentifier identifier, PolarisEntity entity) {
     PolarisResolvedPathWrapper resolvedParent =
         resolvedEntityView.getResolvedPath(identifier.namespace());
     if (resolvedParent == null) {
@@ -1671,14 +1631,11 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
           String.format("Failed to fetch resolved parent for TableIdentifier '%s'", identifier));
     }
 
-    createTableLike(catalogId, identifier, entity, resolvedParent);
+    createTableLike(identifier, entity, resolvedParent);
   }
 
   private void createTableLike(
-      long catalogId,
-      TableIdentifier identifier,
-      PolarisEntity entity,
-      PolarisResolvedPathWrapper resolvedParent) {
+      TableIdentifier identifier, PolarisEntity entity, PolarisResolvedPathWrapper resolvedParent) {
     // Make sure the metadata file is valid for our allowed locations.
     String metadataLocation = TableLikeEntity.of(entity).getMetadataLocation();
     validateLocationForTableLike(identifier, metadataLocation, resolvedParent);
@@ -1711,7 +1668,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
     return !expectedParentLocation.relativize(childLocation).equals(childLocation);
   }
 
-  private void updateTableLike(long catalogId, TableIdentifier identifier, PolarisEntity entity) {
+  private void updateTableLike(TableIdentifier identifier, PolarisEntity entity) {
     PolarisResolvedPathWrapper resolvedEntities =
         resolvedEntityView.getResolvedPath(identifier, entity.getSubType());
     if (resolvedEntities == null) {
@@ -1740,7 +1697,6 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
   }
 
   private @NotNull PolarisMetaStoreManager.DropEntityResult dropTableLike(
-      long catalogId,
       PolarisEntitySubType subType,
       TableIdentifier identifier,
       Map<String, String> storageProperties,
@@ -1766,10 +1722,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
   }
 
   private boolean sendNotificationForTableLike(
-      long catalogId,
-      PolarisEntitySubType subType,
-      TableIdentifier tableIdentifier,
-      NotificationRequest request) {
+      PolarisEntitySubType subType, TableIdentifier tableIdentifier, NotificationRequest request) {
     LOG.debug("Handling notification request {} for tableIdentifier {}", request, tableIdentifier);
     PolarisResolvedPathWrapper resolvedEntities =
         resolvedEntityView.getPassthroughResolvedPath(tableIdentifier, subType);
@@ -1779,8 +1732,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
     Preconditions.checkNotNull(notificationType, "Expected a valid notification type.");
 
     if (notificationType == NotificationType.DROP) {
-      return dropTableLike(
-              catalogId, PolarisEntitySubType.TABLE, tableIdentifier, Map.of(), false /* purge */)
+      return dropTableLike(PolarisEntitySubType.TABLE, tableIdentifier, Map.of(), false /* purge */)
           .isSuccess();
     } else if (notificationType == NotificationType.CREATE
         || notificationType == NotificationType.UPDATE) {
@@ -1816,7 +1768,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
 
       TableOperations tableOperations = newTableOps(tableIdentifier);
       String locationDir = newLocation.substring(0, newLocation.lastIndexOf("/"));
-      ;
+
       FileIO fileIO =
           refreshIOWithCredentials(
               tableIdentifier,
@@ -1831,7 +1783,9 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
 
       // finally, validate that the metadata file is within the table directory
       validateMetadataFileInTableDir(
-          tableIdentifier, tableMetadata, CatalogEntity.of(resolvedParent.getRawFullPath().get(0)));
+          tableIdentifier,
+          tableMetadata,
+          CatalogEntity.of(resolvedParent.getRawFullPath().getFirst()));
 
       // TODO: These might fail due to concurrent update; we need to do a retry in those cases.
       if (null == existingLocation) {
@@ -1839,14 +1793,14 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
             "Creating table {} for notification with metadataLocation {}",
             tableIdentifier,
             newLocation);
-        createTableLike(catalogId, tableIdentifier, entity, resolvedParent);
+        createTableLike(tableIdentifier, entity, resolvedParent);
       } else {
         LOG.debug(
             "Updating table {} for notification with metadataLocation {}",
             tableIdentifier,
             newLocation);
 
-        updateTableLike(catalogId, tableIdentifier, entity);
+        updateTableLike(tableIdentifier, entity);
       }
     }
     return true;
@@ -1856,11 +1810,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
     // Pre-create namespaces if they don't exist
     for (int i = 1; i <= namespace.length(); i++) {
       Namespace nsLevel =
-          Namespace.of(
-              Arrays.stream(namespace.levels())
-                  .limit(i)
-                  .collect(Collectors.toList())
-                  .toArray(String[]::new));
+          Namespace.of(Arrays.stream(namespace.levels()).limit(i).toArray(String[]::new));
       if (resolvedEntityView.getPassthroughResolvedPath(nsLevel) == null) {
         Namespace parentNamespace = PolarisCatalogHelpers.getParentNamespace(nsLevel);
         PolarisResolvedPathWrapper resolvedParent =
@@ -1870,8 +1820,7 @@ public class BasePolarisCatalog extends BaseMetastoreViewCatalog
     }
   }
 
-  private List<TableIdentifier> listTableLike(
-      long catalogId, PolarisEntitySubType subType, Namespace namespace) {
+  private List<TableIdentifier> listTableLike(PolarisEntitySubType subType, Namespace namespace) {
     PolarisResolvedPathWrapper resolvedEntities = resolvedEntityView.getResolvedPath(namespace);
     if (resolvedEntities == null) {
       // Illegal state because the namespace should've already been in the static resolution set.
